fix column spacing

--- a/docs/wherehaus_sty.css
+++ b/docs/wherehaus_sty.css
@@ -81,6 +81,7 @@ a
     align-items: flex-start;
     width: 50%;
     position: relative;
+    margin-right: 5%;
 }
 
 h1
